[package]
name = "oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/oxide.rs"
name = "oxide"

[dependencies]
markdown = "0.3"
regex = "1.5.4"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8"